trunk/Archive2/67/d38a42ce2a4283/output
main.cpp:3:1: error: 'n_carre' does not name a type
 n_carre=n*n;
 ^
main.cpp:4:1: error: 'cout' does not name a type
 cout <<"La variable n contient "<<n<<"."<<endl;
 ^
main.cpp:5:1: error: 'cout' does not name a type
 cout <<"Le carre de  "<<n<<"est"<<n_carre<<"."<<endl;
 ^
main.cpp:6:1: error: 'cout' does not name a type
 cout <<"Le double de n est  "<<2*n<<"."<<endl;
 ^
